syntax = "proto3";

option java_multiple_files = true;
package player.command;

message PlayerCreateCommandProto {
  string txKey = 1;
  string logTrackKey = 2;
}
